<resources>
    <string name="app_name">Facebook</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="next_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="error_username">Username must contain at least 8 charaters</string>
</resources>