<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment"
    android:background="@color/logInPageBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp"
        >
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/fb"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Title" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/hint_username"
            app:errorEnabled="true"
            android:id="@+id/username_text_input"
            style="@style/Widget.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/username_editText"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/hint_password"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:id="@+id/password_text_input"
            style="@style/Widget.TextInputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_edit_text"
                android:inputType="textPassword"

                />

        </com.google.android.material.textfield.TextInputLayout>

       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
        >
           <com.google.android.material.button.MaterialButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/next_button"
               android:text="@string/next_button"
               style="@style/Widget.Button"
               android:layout_alignParentEnd="true"
               android:layout_alignParentRight="true"
               android:textAppearance="@style/TextAppearance.ButtonText"
               />

           <com.google.android.material.button.MaterialButton
               android:id="@+id/cancel_button"
               style="@style/Widget.Button.TextButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="12dp"
               android:layout_marginRight="12dp"
               android:layout_toStartOf="@id/next_button"
               android:layout_toLeftOf="@id/next_button"
               android:text="@string/cancel_button"
               android:textAppearance="@style/TextAppearance.ButtonText"
                />
       </RelativeLayout>

    </LinearLayout>


</ScrollView>